feat: RBAC, multi-tenant isolation, audit logs, analytics, account type display
- Fix multi-tenant isolation: SignTrustIdentity reads tenantId from DB instead of JWT realm
- Add RBAC to frontend sidebar (admin/manager/member role filtering)
- Add Activity page (audit logs with filters and pagination)
- Add Analytics page (KPIs, trends, per-user stats)
- Add AuditResource and AnalyticsResource backend endpoints
- Display account type (particulier/entreprise) and company name in sidebar
- Group user info in consolidated card (account type header + company + name + email + role)
- Fix Keycloak tenant creation (firstName/lastName required by User Profile)
- Fix AuthService: new registrations get unique tenantId and admin role
- Add accountType/companyName to LoginResponse and frontend auth types
- Restrict Console SuperAdmin to SUPER_ADMIN role only

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>